<resources>
    <string name="app_name">YugiBrick</string>

    <!-- Loading -->
    <string name="loading">Loading…</string>
    <string name="loading_2">Hang On…</string>
    <string name="loading_3">We\'re almost there…</string>
    <string name="loading_4">Please wait…</string>
    <string name="loading_5">This may take a few minutes…</string>

    <!-- drawer -->
    <string name="menu_main">Calculate!</string>
    <string name="menu_about">About</string>

    <!-- Calculator -->
    <string name="title_item_combo">%s-card combo (%s%%)</string>
    <string name="btn_label_calc_add_combo">Add Combo!</string>
    <string name="label_calc_adding_combo_help">Add any combos that your deck can execute. Example: 2-card combo (Field Spell + Monster), 2-card combo (Terraforming + Monster) etc…</string>
    <string name="label_calc_action">Action</string>
    <string name="input_label_calc_deck_count">Deck Count</string>
    <string name="input_label_calc_card_in_hand">Draw Size</string>
    <string name="btn_label_calc_calculate">Calculate Bricky-ness</string>

    <!-- Combo -->
    <string name="title_combo">Add Your Combo!</string>
    <string name="btn_label_combo_add_card">Add Card</string>
    <string name="btn_label_combo_add_combo">Done</string>
    <string name="label_combo_action">Action</string>
    <string name="label_combo_adding_card_help">Add your card(s) that you need to execute your combo. Example 2-card combo: Cynet Mining x3 and Any Salamangreat x10</string>

    <!-- Card -->
    <string name="input_label_add_card_name">Card Name</string>
    <string name="input_label_add_card_count">Number of Copies</string>

    <!-- Result -->
    <string name="label_result_low">%s%% chance of executing atleast 1 combo? Nice fun deck you have there. hehe.</string>
    <string name="label_result_mid">You have %s%% chance of executing atleast 1 of your combos.</string>
    <string name="label_result_high">%s%% chance of executing atleast 1 of your combos. Consistency is the key.</string>

    <!-- About -->
    <string name="label_about_developer_label">Developer</string>
    <string name="label_about_developer_value">Tenten Ponce</string>

    <string name="label_about_github_label">Code Source</string>
    <string name="label_about_github_value">YugiBrick Github</string>
</resources>
