<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tenten.ui.TToolbar
        android:id="@+id/ttoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_combo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/l_space">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_card_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lin_card_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </androidx.core.widget.NestedScrollView>

        <com.tenten.ui.TText
            android:id="@+id/ttext_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_space"
            android:text="@string/label_combo_adding_card_help"
            app:layout_constraintTop_toBottomOf="@+id/sv_card_list" />

        <com.tenten.ui.TButton
            android:id="@+id/tbtn_add_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_space"
            android:text="@string/btn_label_combo_add_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ttext_help" />

        <com.tenten.ui.TButton
            android:id="@+id/tbtn_add_combo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs_space"
            android:text="@string/btn_label_combo_add_combo"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/tbtn_add_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
